--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,7 +2,10 @@
   <section class="banner">
     <h1> Find the perfect freelance services for your business </h1>
     <p>Hire proven pros with confidence using the world’s largest, remote talent platform.</p>
-    <%= link_to 'SignUp', signup_path,class:'btn-primary' %>
+    <div class="links">
+      <%= link_to 'SignUp', signup_path,class:'btn-primary' %>
+      <%= link_to 'jobs/freelancers', search_results_path,class:'btn-primary' %>
+    </div>
   </section>
   <div class=" banner-illustration">
     <%= inline_svg_tag "freelancer.svg" ,class:'svg_img' %>
