--- a/app/views/profiles/_user_profile.html.erb
+++ b/app/views/profiles/_user_profile.html.erb
@@ -15,6 +15,12 @@
       <%= user.bidding_profile&.category %>
       <%= user.role unless user_freelancer?(user) %>
     </div>
+    <% if current_user != user %>
+      <%= link_to conversations_path(sender_id:current_user&.id,
+          recipient_id:user&.id ),class:'message',method: :post,remote: true do %>
+        <i class="fad fa-envelope"></i>
+      <% end %>
+    <% end %>
   </li>
   <li>
     <ul class="details__tab-<%= user.role %>">
