--- a/app/views/pages/_no-results.html.erb
+++ b/app/views/pages/_no-results.html.erb
@@ -1,4 +1,4 @@
 <div class="no__results">
   <i class="fas fa-telescope"></i>
-  <h4>no results  </h4>
+  <h4>no <%=search_type?%> found  </h4>
 </div>
