--- a/app/views/admin/bids/new.html.erb
+++ b/app/views/admin/bids/new.html.erb
@@ -40,6 +40,20 @@
               <%= @bid.errors[:value][0] %> </div>
           <% end  %>
         </div>
+        <div class="upload__documents">
+          <%=  f.label :documents  do %>
+            <i class="far fa-paperclip"></i>
+          <%end %>
+          <%=  f.file_field :documents,multiple: true  %>
+          <% documents= @bid&.documents %>
+          <ol class="documents-attached upload__doc">
+            <%documents&.each do |document| %>
+              <%=  link_to rails_blob_path(document, disposition: 'attachment') do %>
+                <li><%= document.filename %></li>
+              <% end  %>
+            <% end %>
+          </ol>
+        </div>
         <div class="submit__proposal">
           <%= f.submit data: {disable_with: 'Bidding....'  }  %>
         </div>
