--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -52,7 +52,7 @@
           <%=  f.label :category,'Choose Industry'  %>
           <%=  f.select :category, all_categories, include_blank: 'Choose any'  %>
           <%unless @user.errors[:category].empty? %>
-            <div class="error">
+            <div class="errors">
               <i class="fas fa-exclamation-circle"></i>
               <%= @user.errors[:category][0] %> </div>
           <% end  %>
