fixed search functionality

--- a/app/views/bidding_profiles/index.html.erb
+++ b/app/views/bidding_profiles/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "My feed"  %>
 <main class="freelancer__feed">
   <h2>My Feed</h2>
-  <%= link_to 'Complete your profile',  new_bidding_profile_path unless bidding_profile_exist? %>
+  <%= link_to 'Search',  search_results_path %>
   <% unless @projects.empty? || @projects.nil? %>
     <%=  render 'projects__on-feed',projects: @projects  %>
   <%else %>
