--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,7 @@
 <main class="client__feed">
   <div class="projects__heading">
     <h3>my postings</h3>
+    <%= link_to 'Search',  search_results_path %>
     <%= link_to 'New Project',new_project_path %>
   </div>
   <ul class="projects-posted-by-client">
