--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -134,7 +134,8 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
 
 /******search-bar**/
 .search__projects,
-.search__freelancers {
+.search__freelancers,
+.search__users {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -228,7 +229,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     }
     .filters {
       display: inline-block;
-      right: 45px;
+      right: 90px;
       background: transparent;
 
       svg {
@@ -237,7 +238,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
         height: 20px;
         top: 50%;
         transform: translate((-50%, -50%));
-        left: 50%;
+        left: 75%;
         &:hover {
           cursor: pointer;
         }
@@ -245,13 +246,13 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     }
     .reset__btn {
       background: transparent;
-      right: 90px;
+      right: 45px;
 
       i {
         color: black;
         position: absolute;
         transform: translate((-50%, -50%));
-        left: 75%;
+        left: 50%;
         top: 50%;
       }
     }
@@ -277,7 +278,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
         display: block;
         margin-bottom: 0.1rem;
       }
-      .search__experience {
+      .search__role {
         label {
           text-align: center;
         }
@@ -329,11 +330,13 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
 
     @import "allprojects";
   }
-  .search__results-freelancers {
+  .search__results-freelancers,
+  .search__results-users {
     width: 100%;
     border: 1px solid #cac4c4;
     border-top: none;
-    .freelancers {
+    .freelancers,
+    .users {
       width: 100%;
       line-height: normal;
       border: 0px;
@@ -341,7 +344,8 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
       & li {
         list-style-type: none;
       }
-      .freelancer {
+      .freelancer,
+      .user {
         display: flex;
         list-style-type: none;
         position: relative;
@@ -371,7 +375,9 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
           flex-direction: column;
           padding: 0.6rem 0.5rem 0;
           gap: 0.5rem;
-          .freelancer__name {
+
+          .freelancer__name,
+          .user__name {
             font-size: 1rem;
             color: #474747;
             text-transform: capitalize;
@@ -386,6 +392,21 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
               text-decoration: underline;
             }
           }
+          .user___role-freelancer,
+          .user___role-client {
+            padding: 0.2rem 1rem;
+            border-radius: 20px;
+            font-weight: 600;
+            font-size: 0.7rem;
+            background: #def7ec;
+            color: #027581;
+            position: absolute;
+            right: 1rem;
+          }
+          .user___role-client {
+            background: #f0f6b2;
+            color: orange;
+          }
           .freelancer__bio {
             flex-basis: 25px;
             font-family: $font-montserrat;
@@ -394,7 +415,8 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
             font-weight: 500;
             line-height: 16px;
           }
-          .freelancer__joined-on {
+          .freelancer__joined-on,
+          .user__joined-on {
             font-weight: 400;
             font-size: 0.7rem;
             color: #242424;
@@ -444,7 +466,24 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     box-shadow: $box-shadow;
     border-radius: 1rem;
     background: white;
-
+    position: relative;
+    & > a {
+      position: absolute;
+      font-size: 0.9rem;
+      top: 2rem;
+      right: 1rem;
+      text-decoration: none;
+      color: white;
+      background: rgb(51, 161, 57);
+      padding: 0.5rem 0.8rem;
+      border-radius: 5px;
+      font-weight: 500;
+      transition: background 0.5s;
+      z-index: 12;
+      &:hover {
+        background: rgb(38, 122, 42);
+      }
+    }
     @import "profile/user-profile";
   }
   .close__profile-modal {
