--- a/app/assets/stylesheets/profile/_user-profile.scss
+++ b/app/assets/stylesheets/profile/_user-profile.scss
@@ -99,10 +99,13 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     position: relative;
     width: 100%;
 
-    div {
+    .category {
       font-weight: 600;
       font-size: 0.8rem;
       color: #696969;
+    }
+    & > a {
+      font-size: 1.8rem;
     }
     @include borderBottom;
   }
