--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -296,12 +296,12 @@ $font-quicksand: "Quicksand", serif;
     a {
       font-family: $font-comfortaa;
       font-weight: 700;
-      padding: 0.8rem 1.5rem;
+      padding: 0.5rem 1rem;
       text-decoration: none;
-      border-radius: 0.5rem;
+      border-radius: 5px;
       background: #37a000;
       color: white;
-      font-size: 1rem;
+      font-size: 0.8rem;
       transition: all 0.5s;
       &:hover {
         background: #2c7a02;
