--- a/app/views/pages/_search-results-projects.html.erb
+++ b/app/views/pages/_search-results-projects.html.erb
@@ -4,7 +4,7 @@
       <li class="project">
         <ul>
           <li class="project__title">
-            <%= link_to project.title, project_path(project),remote: true %>
+            <%= link_to limit_characters(project.title), project_path(project),remote: true %>
           </li>
           <li class="project__experience">
             Experience: <%=project.experience%>
