--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -183,15 +183,30 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
       a {
         padding: 0.5rem;
         border: 1px solid black;
-        width: 180px;
-        border: 1px solid #b9b9b9;
+        width: 140px;
+        border: 1px solid #d1d1d1;
         text-align: center;
-        font-size: 0.9rem;
+        font-size: 0.75rem;
         border-radius: 5px;
-        margin: 0.5rem 0.2rem;
+        margin: 0.5rem 0rem;
         text-decoration: none;
         color: black;
         font-weight: 500;
+        transition: all 0.3s;
+        &:hover {
+          background: rgb(241, 241, 241);
+          color: black;
+        }
+      }
+      .freelancer,
+      .project {
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px;
+      }
+      .project,
+      .all {
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
       }
       .add__background {
         background: #4795cc;
