--- a/app/views/pages/_search_projects.html.erb
+++ b/app/views/pages/_search_projects.html.erb
@@ -12,10 +12,10 @@
     <% end %>
   <% end %>
   <div class="search ">
-    <%= link_to 'Freelancers',search_freelancers_path,remote: true %>
-    <%= link_to 'Projects',search_projects_path,remote: true,class: "#{search_type? == "project" ?  "add__background" : ""  } " %>
+    <%= link_to 'Freelancers',search_freelancers_path,remote: true ,class: "freelancer #{search_type? == "freelancer" ?  "add__background" : ""  } " %>
+    <%= link_to ' Projects',search_projects_path,remote: true,class: "project #{search_type? == "project" ?  "add__background" : ""  } " %>
     <% if current_user %>
-      <%= link_to 'Client & freelancers',freelancers_and_clients_path,remote: true,class: "#{search_type? == "all" ?  "add__background" : ""  } " %>
+      <%= link_to 'Client & freelancers',freelancers_and_clients_path,remote: true,class: "all #{search_type? == "all" ?  "add__background" : ""  } " %>
     <% end %>
   </div>
 </div>
