--- a/app/views/pages/_search_users.html.erb
+++ b/app/views/pages/_search_users.html.erb
@@ -19,10 +19,10 @@
     <%= link_to  'Clear Filters',request.path, class: "reset__btn" %>
   </div>
   <div class="search ">
-    <%= link_to 'Freelancers',search_freelancers_path,remote: true ,class: "#{search_type? == "freelancer" ?  "add__background" : ""  } " %>
-    <%= link_to ' Projects',search_projects_path,remote: true,class: "#{search_type? == "project" ?  "add__background" : ""  } " %>
+    <%= link_to 'Freelancers',search_freelancers_path,remote: true ,class: "freelancer #{search_type? == "freelancer" ?  "add__background" : ""  } " %>
+    <%= link_to ' Projects',search_projects_path,remote: true,class: "project #{search_type? == "project" ?  "add__background" : ""  } " %>
     <% if current_user %>
-      <%= link_to 'Client & freelancers',freelancers_and_clients_path,remote: true,class: "#{search_type? == "all" ?  "add__background" : ""  } " %>
+      <%= link_to 'Client & freelancers',freelancers_and_clients_path,remote: true,class: "all #{search_type? == "all" ?  "add__background" : ""  } " %>
     <% end %>
   </div>
 </div>
