fixed minor issues

--- a/app/assets/stylesheets/_allprojects.scss
+++ b/app/assets/stylesheets/_allprojects.scss
@@ -54,6 +54,12 @@ h2 {
           word-spacing: 3px;
         }
       }
+      .project__category {
+        font-weight: 600;
+        font-size: 0.9rem;
+        color: green;
+        align-self: flex-start;
+      }
       .project__experience {
         font-weight: 600;
         font-size: 0.8rem;
