--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -52,6 +52,7 @@ $font-quicksand: "Quicksand", serif;
       color: green;
     }
   }
+
   & > form {
     border-top: $border;
     background: #ffffff;
@@ -88,13 +89,6 @@ $font-quicksand: "Quicksand", serif;
       font-family: "Quicksand", serif;
       font-weight: 500;
       font-size: 1.2rem;
-      &::after {
-        content: "*";
-        position: absolute;
-        color: rgb(218, 0, 0);
-        top: 0;
-        right: -10px;
-      }
     }
 
     .project__category,
@@ -183,6 +177,7 @@ $font-quicksand: "Quicksand", serif;
       }
     }
   }
+
   .project__title-form,
   .freelancer__education-form {
     position: relative;
@@ -207,6 +202,7 @@ $font-quicksand: "Quicksand", serif;
   }
   .project__experience-form,
   .freelancer__experience-form {
+    position: relative;
     label {
       font-size: 1rem;
       word-spacing: 3px;
@@ -219,7 +215,7 @@ $font-quicksand: "Quicksand", serif;
       perspective: 1000px;
       perspective-origin: center;
 
-      & div {
+      .experience__level {
         flex-basis: 30%;
         display: flex;
         flex-direction: column;
@@ -243,6 +239,22 @@ $font-quicksand: "Quicksand", serif;
           z-index: 0;
           top: 5px;
         }
+      }
+    }
+    .error {
+      bottom: -0.8rem;
+    }
+  }
+}
+.project__page {
+  & > form {
+    label {
+      &::after {
+        content: "*";
+        position: absolute;
+        color: rgb(218, 0, 0);
+        top: 0;
+        right: -10px;
       }
     }
   }
