--- a/app/views/projects/_description.html.erb
+++ b/app/views/projects/_description.html.erb
@@ -1,4 +1,9 @@
 <div class="project__description-form" >
   <%= f.label :description,'Description' %>
   <%=  f.rich_text_area :description  %>
+  <%unless project.errors[:description].empty? %>
+    <div class="error">
+      <i class="fas fa-exclamation-circle"></i>
+      <%= project.errors[:description][0] %> </div>
+  <% end  %>
 </div>
