--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -57,10 +57,11 @@
               <%= @user.errors[:category][0] %> </div>
           <% end  %>
         </div>
-        <div class="user__subcateogory">
+        <div class="user__subcateogory" data-subcategory="<%=@user.subcategory%>">
           <%=  f.label :subcategory,'Subindustry'  %>
           <%=  f.select(:subcategory, [], include_blank: 'Choose any')  %>
         </div>
+       
       </div>
       <!-- Role field -->
       <div class="role__field">
